--- a/app/views/layouts/head.ejs
+++ b/app/views/layouts/head.ejs
@@ -3,8 +3,11 @@
 <link rel="stylesheet" href="/components/bootstrap/dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="/css/style.css">
 
+<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+
+
 <script type="text/javascript" src="/components/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript" src="/components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="/js/api.js"></script>
 <script type="text/javascript" src="/js/application.js"></script>
-
+<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
