--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,10 +2,7 @@ body {
   padding: 50px;
   font: 14px "Avenir", Helvetica, Arial, sans-serif;
 }
-/*a {
-  color: #00B7FF;
-}
-*/
+
 h1 {
   color: red;
 }
@@ -30,4 +27,12 @@ h3, h4 {
 .responsive-image {
   max-width: 100%;
   height: 234px;
+}
+
+/*.navbar-header {
+  background-color: #CEAD77;
+}*/
+
+.attr-name {
+  text-align: center;
 }
