created models for attractions, tours, transportation, booking

--- a/app/views/attraction/index.ejs
+++ b/app/views/attraction/index.ejs
@@ -1,3 +1,7 @@
+<ol class="breadcrumb">
+  <li><a href="./">Home</a></li>
+  <li class="active"><a href="./attractions">All Attractions</a></li>
+</ol>
 <h1 align="center">All Attractions</h1>
 <div class="container">
   <div class="row" id='attractions'>
