--- a/app/views/attraction/show.ejs
+++ b/app/views/attraction/show.ejs
@@ -1,3 +1,9 @@
+<ol class="breadcrumb">
+  <li><a href="./">Home</a></li>
+  <li><a href="/attractions">All Attractions</a></li>
+  <li class="active">Current attraction</li>
+</ol>
+
 <h1>Attraction</h1>
 
 <div class ='supercontainer' align="center">
