--- a/app/views/layouts/header.ejs
+++ b/app/views/layouts/header.ejs
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-default breadcrumb" role="navigation">
   <a href="/">
   <div class="navbar-header">
   <h3 class="navbar-brand">CURIOUS</h3></a>
